k8s/dev/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-app
spec:
  template:
    spec:
      containers:
        - name: desafio-app
